fix: INJECT_FACTS_AS_VARS - porting ansible 13 (templates)

--- a/templates/apache2-misp.conf.j2
+++ b/templates/apache2-misp.conf.j2
@@ -1,8 +1,8 @@
 {{ ansible_managed | comment }}
 
-{% if misp_base_port != 80 and misp_base_port != 443 and ansible_os_family == "Debian" %}
+{% if misp_base_port != 80 and misp_base_port != 443 and ansible_facts['os_family'] == "Debian" %}
 Listen {{ misp_base_port }}
-{% elif misp_base_port != 80 and ansible_os_family == "RedHat" %}
+{% elif misp_base_port != 80 and ansible_facts['os_family'] == "RedHat" %}
 Listen {{ misp_base_port }}
 
 {% endif %}
@@ -35,11 +35,11 @@ Listen {{ misp_base_port }}
     Header set X-Frame-Options DENY
 
 {% if misp_base_port == 443 %}
-{% if ansible_os_family == "RedHat" %}
+{% if ansible_facts['os_family'] == "RedHat" %}
     SSLEngine on
 {% endif %}
-    SSLCertificateFile {{ ssl_dir }}/{{ ansible_fqdn }}.crt
-    SSLCertificateKeyFile {{ ssl_privatedir }}/{{ ansible_fqdn }}.key
+    SSLCertificateFile {{ ssl_dir }}/{{ ansible_facts['fqdn'] }}.crt
+    SSLCertificateKeyFile {{ ssl_privatedir }}/{{ ansible_facts['fqdn'] }}.key
 
 {% if misp_webserver_harden %}
     Include {{ apacheetc }}/harden-apache2-https.conf
